objects/OAuthApp__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_Token__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refresh_Token__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth Applications</label>
</CustomObject>